--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,10 @@
 .form-heading { color:#fff; font-size:23px;}
 .panel h2{ color:#444444; font-size:18px; margin:0 0 8px 0;}
 .panel p { color:#777777; font-size:14px; margin-bottom:30px; line-height:24px;}
+
+.login-link{
+  margin-top:10px;
+}
 .login-form .form-control {
   background: #f7f7f7 none repeat scroll 0 0;
   border: 1px solid #d4d4d4;
@@ -29,14 +33,21 @@
   text-decoration: underline;
 }
 .login-form  .btn.btn-primary {
-  background: #f0ad4e none repeat scroll 0 0;
-  border-color: #f0ad4e;
+  background:#d32323 none repeat scroll 0 0;
+  border-color:#d32323;
   color: #ffffff;
   font-size: 14px;
   width: 100%;
   height: 50px;
   line-height: 50px;
   padding: 0;
+}
+
+.container .btn-success{
+  background:#d32323;
+  border-color:#d32323;
+  width: 100%;
+  font-size: 14px;
 }
 .forgot {
   text-align: left; margin-bottom:30px;
@@ -46,5 +57,34 @@
   font-size: 14px;
   margin: auto;
 }
+.container-fluid{
+  background:#d32323;
+  border-color:#d32323;
+}
+#nav-div a{
+  color:black;
+}
+#login-link{
+  color:black;
+}
+#login-link:hover{
+  color: whitesmoke;
+}
+#login-icon span{
+  color:black;
+}
+ul#horizontal-list li {
+  display: inline;
+  /*color: white;*/
+  text-align: center;
+}
+ul#horizontal-list li:hover{
+  background-color: #111111;
+}
+
+h2#signup{
+  color: #d32323;
+}
+
 .back { text-align: left; margin-top:10px;}
 .back a {color: #444444; font-size: 13px;text-decoration: none;}
