Add Customer Profile page 1. Added UserProfile frontend page and profile route in the backend 2. User profile gets populated from DB proc get_user via get request 3. Handled updating of user profile 4. Added DB proc update_user to handle user profile updates 5. Made navbar heading (Yelp) clickable to redirect to home page 6. Added image route to backend. As of now only returns default image 7. Updated get_user proc to fetch all fields from table

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -71,13 +71,11 @@
   font-size: 14px;
   margin: auto;
 }
-.container-fluid {
+#nav-fluid {
   background: #d32323;
   border-color: #d32323;
 }
-.container {
-  margin-top: 100px;
-}
+
 #nav-div a {
   color: black;
 }
